--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,7 +23,7 @@ body {
 
 .page-content-wrapper {
 	flex-grow: 1;
-	padding-top: 20px;
+	padding-top: 70px;
 	padding-bottom: 20px;
 }
 
@@ -176,7 +176,7 @@ header .subtitle {
 	opacity: 0.7;
 }
 
-footer {
+.app-footer {
 	text-align: center;
 	padding: 25px 0;
 	color: var(--color-text);
@@ -185,7 +185,7 @@ footer {
 	flex-shrink: 0;
 }
 
-footer p {
+.app-footer p {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -222,7 +222,7 @@ footer p {
 }
 
 .tool-card .disabled-btn {
-	background-color: var(--color-border) !important; 
+	background-color: var(--color-border) !important;
 	color: var(--color-text) !important;
 	opacity: 0.6 !important;
 	cursor: not-allowed !important;
